# nami

./: .gitignore  CMakeLists.txt  README.md
nami/: core.h  entry.h  io.h  memory.h  nami.c  nm_core.h  nm_vec.h  str.h  strings.h  terminal.h
nami/cont/: vec.h
nami/containers/: array.h  string.h
nami/include/nami/: core.h  memory.h
nami/include/nami/containers/: array.h
nami/src/: darwin_memory.c
nami/wip/: nm_sptr.h  nm_str.h
test/: test.c  test.h  test_cont_array.c  test_cont_vec.c
tests/: test.h  test_vec.c
